--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  animated_text_kit: ^4.2.3
+  carousel_slider: ^5.0.0
   connectivity_plus: ^6.1.3
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
@@ -22,6 +24,9 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   lottie: ^3.3.0
+  scrollable_positioned_list: ^0.3.8
+  shared_preferences: ^2.5.2
+  sizer: ^3.0.5
   url_strategy: ^0.3.0
 
 dev_dependencies:
@@ -97,3 +102,7 @@ flutter:
           weight: 600
         - asset: assets/fonts/lusitana/lusitana_regular.ttf
           weight: 400
+
+    - family: Noto Color Emoji
+      fonts:
+        - asset: assets/fonts/noto_color_emoji/NotoColorEmoji-Regular.ttf
